completed the required task to the html file

--- a/login-and-registration.html
+++ b/login-and-registration.html
@@ -17,12 +17,30 @@
             <div id="left">
                 <div id="content">
                     <h2>Sign Up</h2>
+                    <form method="post" 
+                        onsubmit="return false;">
+                        <div>
+                            <input type="text" placeholder="email"/><br/>
+                            <input type="text" placeholder="password"/>
+                        </div>
+                        <button id="Left-to-right" class="on-off">Log In</button>
+                        <button>Register</button>
+                    </form>
                 </div>
             </div>
 
             <div id="right">
                 <div id="content">
                     <h2>Log In</h2>
+                    <form method="post"
+                        onsubmit="return false;">
+                        <div>
+                            <input type="text" placeholder="email"/><br/>
+                            <input type="text" placeholder="password"/>
+                        </div>
+                        <button id="Right-to-left" class="on-off">Sign Up</button>
+                        <button>Log In</button>
+                    </form>
                 </div>
             </div>
 
