--- a/login-and-registration.html
+++ b/login-and-registration.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Login and Registration</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="background">
